--- a/src/main/resources/org/driedtoast/dodesktop/views/main-window.xml
+++ b/src/main/resources/org/driedtoast/dodesktop/views/main-window.xml
@@ -3,11 +3,15 @@
     xmlns:content="org.apache.pivot.wtk.content"
     xmlns="org.apache.pivot.wtk">
     <content>
-      <BoxPane orientation="horizontal" styles="{fill:true, spacing:8}">
-        <ListView bxml:id="listView" selectMode="multi" listData="['Navigation', 'One', 'Two', 'Three']" tooltipText="ListView sample"/>
-      	<Border bxml:id="body" styles="{fill:true}">
+      <SplitPane orientation="horizontal" splitRatio="0.2">
+      	<left>
+      	<ListView bxml:id="listView" selectMode="multi"  styleName="sidebarList"
+        	listData="['Navigation', 'One', 'Two', 'Three']" tooltipText="ListView sample"/>
+        </left>
+        <right>
+        <Border bxml:id="body" styleName="nonBorder">
     	  <content>
-      		<BoxPane  orientation="vertical" styles="{fill:true, spacing:8}">
+      		<BoxPane  preferredWidth="440" orientation="vertical" styles="{fill:true, spacing:8}">
          	 <Label bxml:id="header" text="Pick an import file" styleName="sectionTitle"/>
              <ScrollPane horizontalScrollBarPolicy="fill_to_capacity" verticalScrollBarPolicy="fill" preferredHeight="240">
               <FileBrowser bxml:id="importFile" /> 
@@ -16,6 +20,7 @@
            </BoxPane>
          </content>
         </Border>
-      </BoxPane>
+       	</right>
+      </SplitPane>
     </content>
 </Window>
